deps/v8/test/message/fail/hashbang-incomplete-string.out
*%(basename)s:10: SyntaxError: Invalid or unexpected token
'incomplete string
^^^^^^^^^^^^^^^^^^

SyntaxError: Invalid or unexpected token
